library/database_universe/test/errors/id/wrong_type.dart
// only int and string properties can be used as id

import 'package:database_universe/database_universe.dart';

@collection
class Test {
  late bool id;
}
